--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-audio-player": "0.0.2",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
