--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-audio-player": "0.0.2",
+    "react-native-sound-player": "^0.10.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
